objects/REVVY__MnStrategy4__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_Quantity__c</fullName>
        <description>Holds quantity adjusted by Support Plus</description>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Reason__c</fullName>
        <label>Approval Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Price__c</fullName>
        <label>AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_of_DN__c</fullName>
        <description>Store percentage entered by user. This value will be used in calculating award price when price method is &quot;% of DNet&quot;</description>
        <label>% of DNet</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blended_GP__c</fullName>
        <label>GP %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blended_MSRP__c</fullName>
        <label>% Off MSRP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blended_Rebate__c</fullName>
        <label>Total Rebate %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Dollar__c</fullName>
        <label>Com $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Com %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DNet_Price__c</fullName>
        <label>DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Demo_Product__c</fullName>
        <formula>CONTAINS(Pricing_Program__c, &quot;Demo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store product name/description during support plus process</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrivenByGP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driven by GP%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exc_Rbt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exc Rbt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Award_Price__c</fullName>
        <description>Extended Award Price = Award_price__c * qty</description>
        <label>EXT AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_DNet_Price__c</fullName>
        <description>Traction Unit Level DNet</description>
        <label>EXT DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_MSRP_Price__c</fullName>
        <description>Traction UNit Level MSRP</description>
        <label>EXT MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <description>Setup Fee Percentage for National Account</description>
        <label>Setup Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FreezePricing__c</fullName>
        <formula>QuoteItem__r.REVVY__FreezePricing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freeze Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freeze_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freeze Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_SP_for_Sublines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If sublines have SP checked, then check this box</description>
        <label>Hidden SP for Sublines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSRP_Price__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Style__c</fullName>
        <label>Misc Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mn_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MN Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>Toro Quote Item</relationshipLabel>
        <relationshipName>Toro_Quote_Item_mp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Off_MSRP_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>% Off MSRP Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Off_MSRP__c</fullName>
        <description>Store value of &quot;% off MSRP&quot; entered by user in pricing program page.</description>
        <label>% Off MSRP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OnlyExistedInCPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product not in Commercial Price List</description>
        <label>Only Existed In CPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Award_Price__c</fullName>
        <label>Original Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_off_MSRP__c</fullName>
        <description>Store the original percent of MSRP</description>
        <label>Original % off MSRP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oroginal_of_DNet__c</fullName>
        <description>Original % of DNet</description>
        <label>Oroginal % of DNet</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <label>Part Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Parts_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placeholder1__c</fullName>
        <label>Placeholder1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placeholder2__c</fullName>
        <label>Placeholder2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placeholder3__c</fullName>
        <label>Placeholder3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingMethodValue__c</fullName>
        <description>Store pricing method value user enters. Pricing Method could be one of % off MSRP, % of DNet, Total award price, GP$, and GP%.</description>
        <label>Pricing Method Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Program_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Program Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Program__c</fullName>
        <description>Store value of &quot;Pricing Program&quot; selected by user from &quot;Choose Pricing Program&quot; page. This value is applied to all quote items in this quote.</description>
        <label>Pricing Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>QuoteItem__r.REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MODEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>IF(  ISBLANK(Description__c), QuoteItem__r.REVVY__Catalog_Node__r.REVVY__LocaleName_F__c, Description__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DESCRIPTION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Toro Quote Item</relationshipLabel>
        <relationshipName>Toro_Quote_Item_mp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>QuoteItem__r.REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuoteItem</label>
        <referenceTo>REVVY__MnQuoteItem__c</referenceTo>
        <relationshipLabel>Quote Item</relationshipLabel>
        <relationshipName>Quote_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_as_a_of_DN__c</fullName>
        <description>Store value retrieved from Pricing Program table based on a value of either &quot;% off MSRP&quot; or &quot;% of DNet&quot; entered by a user on &quot;Choose Pricing Program&quot; page.</description>
        <label>RBT%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Select_a_Price_Method__c</fullName>
        <label>Select a Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% of DNET</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>% off MSRP</fullName>
                </value>
                <value>
                    <fullName>Gross Profit %</fullName>
                </value>
                <value>
                    <fullName>Total Award $</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Off_MSRP__c</fullName>
        <description>Percent Off MSRP selected from price program. This is used to store original percent off MSRP.</description>
        <label>Selected Percent Off MSRP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if quote item is applied to support plus</description>
        <label>SP+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Store value entered by distributor during support plus process</description>
        <label>Support Plus Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Price__c</fullName>
        <label>Support (Price)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TPP_Quoteitem_Total__c</fullName>
        <description>Sum of all TPP products in strategy 5 sub line items extension object</description>
        <label>TPP Quoteitem Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Blend_Of_DN__c</fullName>
        <label>% of DNet</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Com_Dollar__c</fullName>
        <label>Toro Com $</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_DNetWOTPPAllied__c</fullName>
        <label>DNet Without TPP and Allied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Distributor_Responsibility__c</fullName>
        <label>Distributor Responsibility</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_Price__c</fullName>
        <label>EXT AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Fee_Amount__c</fullName>
        <label>Total Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Gross_Profit_Percent__c</fullName>
        <label>GP%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Gross_Profit_Value__c</fullName>
        <label>GP $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Product_Tier__c</fullName>
        <formula>QuoteItem__r.REVVY__Catalog_Node__r.Toro_Product_Tier__c</formula>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toro_Rebate__c</fullName>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Rebate__c</fullName>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Setup_Fees__c</fullName>
        <label>ZZZ_Total Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Award__c</fullName>
        <label>EXT Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DNet__c</fullName>
        <label>Total DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Profit_Value__c</fullName>
        <description>This is a blended GP$</description>
        <label>GP $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_MSRP__c</fullName>
        <label>Total MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Toro_Award__c</fullName>
        <description>Total Award Price - TPPAlliedAward</description>
        <label>Toro Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Toro_DNET__c</fullName>
        <label>EXT DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Toro_MSRP__c</fullName>
        <label>EXT MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traction_Unit__c</fullName>
        <formula>TEXT( QuoteItem__r.Traction_Unit__c )</formula>
        <label>Traction Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_In_Price__c</fullName>
        <label>Trade In Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Award_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate that Unit Award has been overridden by user</description>
        <label>Unit Award Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Total_Award__c</fullName>
        <description>Unit Total Award is the bundled (includes configured price and sublines) total award divided by the adjusted quantity</description>
        <formula>Total_Award__c  /  Adjusted_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Total Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>